APIM/yaml/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: app  
  labels:
    app: weather-forecast
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webapi
  template:
    metadata:
      labels:
        app: weather-forecast
        service: webapi
    spec:
      containers:
        - name: webapi
          image: rochonm/weatherforecast:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP              
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: app  
  labels:
    app: weather-forecast
    service: webapi
spec:
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP      
  selector:
    service: webapi
