APIM/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  ports:
    - port: 8100
      targetPort: 80
      name: web
  selector:
    app: ingress-weather
  type: ClusterIP
